Improve code cleanliness